Multiple parameters seems to classify correctly.